<resources>
    <string name="app_name">Калькулятор</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="letter_s">S</string>
    <string name="letter_a">A</string>
    <string name="letter_m">M</string>
    <string name="letter_o">O</string>
    <string name="letter_y">Y</string>
    <string name="letter_l">L</string>
    <string name="letter_e">E</string>
    <string name="letter_n">N</string>
    <string name="letter_k">K</string>
    <string name="x_3">X^3</string>
    <string name="skr">(</string>
    <string name="skl">)</string>
    <string name="n">n!</string>
    <string name="del">del</string>
    <string name="ser">=</string>
    <string name="plmin">+/-</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_10_x">10^x</string>
    <string name="x_y">x^y</string>
    <string name="mn">X</string>
    <string name="_1_x">1/x</string>
    <string name="clear">C</string>
    <string name="mod_x">|x|</string>
    <string name="normal">Обычн</string>
    <string name="inz">Инж</string>
</resources>
